Fix logging classpath conflicts and Tomcat leak detection warnings
Eliminate three categories of warnings in the fit/ integration test module:

1. commons-logging/spring-jcl conflict: Exclude commons-logging globally from
   httpclient, esigate-core, and commons-vfs2 in root POM. Replace with
   jcl-over-slf4j (JCL→SLF4J bridge) for test classpaths. Remove direct
   commons-logging dependencies from client-proxy and samples/client.

2. SLF4J "Reload4jServiceProvider not a subtype": Mark slf4j-api and
   slf4j-simple as provided scope in server-tecsvc-servlet WAR to prevent
   bundling in WEB-INF/lib, avoiding dual-classloader type mismatch with
   the parent classloader's slf4j-reload4j.

3. Tomcat --add-opens warnings: Disable ObjectStream cache, ThreadLocal,
   and RMI Target leak detection on all StandardContext instances in
   TomcatTestServer. These reflection-based checks require --add-opens
   flags on Java 17+ and serve no purpose for an ephemeral test server.

4. log4j "No appenders found": Move log4j.properties from test to main
   resources so it is on the exec-maven-plugin's runtime classpath when
   TomcatTestServer.main() runs during pre-integration-test.